# fastbot_waypoints

./: CMakeLists.txt  README.md  package.xml
src/: fastbot_action_server.cpp
test/: waypoints_test_ros_as.cpp
